# orbit-wars

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bench_bots.py  bench_match_counters.py  docker-compose.yml  easy.lean  jax_rollout_bench.py  replay-eval.py  run.ps1  run.sh  run_batched.py  run_batched_4p.py  run_match.py  run_match_gui.py  run_prometheus_selfplay.py
aim_benchmark/: aim_benchmark.py  aim_samples.npz  (+7 more)
bots/alphaduck/aim_native/: Cargo.toml  pyproject.toml  range_aim_prototype.py
bots/alphaduck/aim_native/src/: constants.rs  lib.rs
bots/alphaow_experimental/prometheus_v1/: Cargo.toml  main.py
bots/alphaow_experimental/prometheus_v1/src/: profiling.rs
bots/alphaow_experimental/prometheus_v1/src/apollo/: world.rs
bots/alphaow_experimental/prometheus_v1/train/: eval.py  kaggle_rebuild_v2.py  manifest.csv  pipeline.py  select_strong_replays.py  summary_features.py
bots/alphaow_experimental/prometheus_v1/train/weights/: xgb_46p12e88t11_latest.meta.json
bots/archive/rl_poc/: README.md  agent.yaml  main.py  pyproject.toml
bots/archive/rl_poc/src/rl_poc/: __init__.py  features.py  model.py  opponents.py  policy.py  train.py
bots/archive/rl_poc/wandb/wandb/offline-run-20260526_161106-61ttxx3t/: run-61ttxx3t.wandb
bots/mine/aphrodite/: ALPHAOW.md  Cargo.toml  FINDINGS.md  README.md  build_submission.py  config.json  config_4p.json  main.py  run.sh
bots/mine/aphrodite/.cargo-home-bullseye/: .global-cache
bots/mine/aphrodite/src/: apollo_bridge.rs  duct.rs  eval.rs  focused_plan.rs  lib.rs  main.rs  ow2_plan.rs  pathing.rs  profiling.rs  sim.rs  value_net.rs  xgb.rs
bots/mine/aphrodite/src/apollo/: aim.rs  cache.rs  constants.rs  early_game.rs  engine.rs  helpers.rs  mod.rs  rollout.rs  strategy.rs  world.rs
bots/mine/aphrodite/train/: FEATURE_SPEC_V3_4P.md  HANDOFF.md  README.md  build_aux.py  build_from_zip.py  build_ladder.py  check_parity.py  collect.py  collect_leaves.py  combine_npz.py  elo_topn.py  eval.py  eval_net_compare.py  extras_v3_build.py  extras_v4_build.py  feature_importance.py  filter_both_topn.py  filter_top10_and_train_xgb.py  from_replays.py  from_replays_fast.py  iterate.py  kaggle_rebuild_v2.py  mcts_match.py  probe.py  probe_v3.py  quality_sweep.py  quality_sweep_4p.py  rebuild_and_retrain_local.py  rebuild_fixed_extrap.py  summary_features.py  train.py  train_first_owned_xgb.py  train_gnn.py  train_summary.py  train_summary_v2.py  train_xgb.py  tune_features.md  validate_extract.py  viewer_first_owned.py
bots/mine/aphrodite/train/weights/: _ablate_4p_noaggr.json  _ablate_no_prodscaled.json  _ablate_no_shipshare.json  xgb_2p.json  xgb_2p_6_01_6_07.json  xgb_2p_6_01_6_07_decdrop_noablate.json  xgb_2p_6_01_6_07_noablate.json  xgb_2p_6_08_6_14.json  xgb_2p_dec.json  xgb_2p_dec_noqualityfilter.json  xgb_2p_full65.json  xgb_2p_leaf_shapdrop.json  xgb_2p_leaf_shapdrop_v2.json  xgb_2p_nostep.json  xgb_2p_qsweep_r2_top10_floor020.json  xgb_2p_qsweep_r2_top15_floor005.json  xgb_2p_qsweep_r2_top15_floor020.json  xgb_2p_qsweep_r2_top20_floor010.json  xgb_2p_qsweep_r2_top20_floor020_decweight.json  xgb_2p_qsweep_r2_top20_floor020_dropdec.json  xgb_2p_qsweep_r2_top20_floor020_droponly.json  xgb_2p_qsweep_r2_top20_floor050.json  xgb_2p_qsweep_r2_top20_linear_floor005.json  xgb_2p_qsweep_r2_top20_noquality.json  xgb_2p_qsweep_r3_top20_floor035.json  xgb_2p_qsweep_r3_top20_floor050_decweight.json  xgb_2p_qsweep_r3_top20_floor050_dropdec_decweight.json  xgb_2p_qsweep_r3_top20_floor080.json  xgb_2p_qsweep_r3_top20_noquality_decweight.json  xgb_2p_qsweep_r3_top20_noquality_dropdec.json  xgb_2p_qsweep_r3_top20_noquality_dropdec_decweight.json  xgb_2p_qsweep_r3_top20_noquality_hl14.json  xgb_2p_qsweep_r3_top20_noquality_hl3.json  xgb_2p_qsweep_top10_floor005.json  xgb_2p_qsweep_top20_floor001.json  xgb_2p_qsweep_top20_floor005_dropdec.json  xgb_2p_qsweep_top20_floor020.json  xgb_2p_qsweep_top5_floor005.json  xgb_2p_relfeats.json  xgb_2p_relfeats52.json  (+23 more)
bots/mine/apollo/: Cargo.toml  README.md  agent.yaml  build_submission.py  config.json  config_4p.json  intervals.json  intervals_phase1.json  main.py
bots/mine/apollo/src/: aim.rs  blockers.rs  cache.rs  constants.rs  early_game.rs  engine.rs  entity_cache.rs  hellburner.rs  helpers.rs  lib.rs  rollout.rs  sim_probe.rs  strategy.rs  world.rs
bots/mine/apollo/src/tests/: aim.rs  blockers.rs  cache.rs  early_game.rs  engine.rs  entity_cache.rs  hellburner.rs  mod.rs  reference_engine.rs  rollout_bench.rs  simulator.rs  strategy.rs  timeline.rs
bots/mine/apollo/tuning/: .gitignore  PHASE3_DESIGN.md  README.md  diag_bisect.py  diag_seeds.py  early_game_rounds_sweep.py  gauntlet.py  gauntlet_4p.py  phase3_seeds.json  tune.py  tune_4p.py
bots/mine/apollo/tuning/early_game_rounds_results/: summary.json
bots/mine/duck/: Cargo.toml  README.md  comet_harvest.json  main.py
bots/mine/duck/src/: duct.rs  lib.rs  main.rs  ow2_plan.rs  policy.rs
bots/mine/graph/: Cargo.toml  README.md  agent.yaml  main.py  pyproject.toml  rebuild.sh
bots/mine/graph/src/: lib.rs
bots/mine/ow4/: Cargo.toml  STRATEGY.md  main.py  pyproject.toml  replay_match.py
bots/mine/ow4/src/: attack.rs  combat.rs  game.rs  ledger.rs  lib.rs  opening.rs  pathing.rs  plan.rs
bots/nearest-sniper-rust/: Cargo.toml  README.md  agent.yaml  build_submission.py  main.py  pyproject.toml
bots/nearest-sniper-rust/src/: lib.rs
bots/simbot/: Cargo.toml  README.md  build_submission.py  main.py
bots/simbot/src/: constants.rs  engine.rs  entity_cache.rs  helpers.rs  lib.rs  obnext.rs  rollout.rs  sim_probe.rs  strategy.rs  world.rs
bots/simbot/src/tests/: mod.rs  obnext.rs
experimental_arch/env_engine/: Cargo.toml  README.md  benchmark.py  pyproject.toml  validate.py  validate_reward.py
experimental_arch/env_engine/src/: lib.rs
experimental_arch/env_model/: Cargo.toml  README.md  benchmark.py  benchmark_features.py  pyproject.toml  validate.py  validate_features.py  validate_globals.py
experimental_arch/env_model/src/: features.rs  lib.rs
rust_engine/: Cargo.toml  README.md  pyproject.toml
rust_engine/src/: lib.rs
(+1760 files in other folders)
