[package]
name = "rust_bot_native"
version = "0.1.0"
edition = "2021"
description = "Native Orbit Wars agent for the rust_bot — mirrors the nearest-sniper baseline"

[lib]
name = "rust_bot_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
