[package]
name = "simbot_native"
version = "0.1.0"
edition = "2021"
description = "Native Orbit Wars agent for simbot — nearest-sniper baseline plus a vendored in-bot engine for simulation"

[lib]
name = "simbot_native"
crate-type = ["cdylib"]

[features]
# Mirrors the vendored engine (src/engine.rs): cfg-gates its per-section timers.
# Zero cost when off (the default).
profile = []

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
sha2 = "0.10"
rustc-hash = "2.0"
