[package]
name = "orbit_wars_model"
version = "0.1.0"
edition = "2021"
description = "Stateless Orbit Wars forward model for RL rollouts (no RNG, no comet/planet generation)"

[lib]
name = "orbit_wars_model"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
# Fast, non-DoS-resistant hasher for the hot-path maps (planet-id keyed).
rustc-hash = "2"
# Return feature tensors as numpy arrays (zero-copy: numpy takes ownership of
# the Rust Vec's buffer), so the Python side is `torch.from_numpy`-ready.
numpy = "0.23"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
