[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_poc"
version = "0.0.1"
description = "Orbit Wars RL proof of concept — minimal PPO over per-planet targeting."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "kaggle-environments>=1.28.0",
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["src"]
