[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"

[lib]
name = "aphrodite"
path = "src/lib.rs"

[[bin]]
name = "aphrodite"
path = "src/main.rs"

[[bin]]
name = "extract_v2"
path = "src/bin/extract_v2.rs"

[[bin]]
name = "xgb_parity"
path = "src/bin/xgb_parity.rs"

[features]
# Mirrors the vendored apollo engine: cfg-gates its per-section timers.
profile = []
# Enabled only by the build_submission scripts: per-turn stderr log of the
# chosen move (apollo vs il candidate). Off for dev/eval builds.
submission = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "1.1"
sha2 = "0.10"
# Faster uncontended Mutex than std (no poisoning, lighter fast path) for the
# hot aim caches.
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# The bot is a daemon with no `catch_unwind` and no worker threads (see
# src/main.rs), so a panic already takes the whole process down; the Python
# wrapper (main.py) recovers by returning a no-op move for that step and
# respawning the daemon next step. Aborting instead of unwinding therefore does
# not widen the failure (same per-step + restart blast radius); it just drops
# the unwinding landing pads for a smaller/faster binary. Note: this forfeits
# the option of ever catching a panic mid-process to keep serving turns.
panic = "abort"
