[package]
name = "apollo_native"
version = "0.1.0"
edition = "2021"
description = "Rust native Orbit Wars agent"

[lib]
name = "apollo_native"
crate-type = ["cdylib"]

[features]
# Mirrors the vendored engine (src/engine.rs): cfg-gates its per-section timers.
# Zero cost when off (the default).
profile = []

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
sha2 = "0.10"
rustc-hash = "2.0"

# `lto`/`codegen-units = 1` let the optimizer inline hot `#[inline]` helpers
# across module/codegen-unit boundaries. `panic` is left at the default
# ("unwind") so pyo3 can convert Rust panics into Python exceptions at the
# `#[pymethods]` boundary.
[profile.release]
lto = "fat"
codegen-units = 1
