[package]
name = "apollo_native"
version = "0.1.0"
edition = "2021"
description = "Rust native Orbit Wars agent"

[lib]
name = "apollo_native"
crate-type = ["cdylib"]

[features]
# Mirrors the vendored engine (src/engine.rs): cfg-gates its per-section timers.
# Zero cost when off (the default).
profile = []

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
sha2 = "0.10"
rustc-hash = "2.0"
# Runtime-loaded agent config: constants.rs reads config.json so the tuning loop
# can change constants without recompiling the extension. serde_json only.
serde_json = "1"
# Faster uncontended Mutex than std (no poisoning, lighter fast path) for the
# hot aim caches. Still `Sync`, so the `Bot` pyclass bound is satisfied and the
# cross-thread-per-step access pattern stays sound.
parking_lot = "0.12"

# `lto`/`codegen-units = 1` let the optimizer inline hot `#[inline]` helpers
# across module/codegen-unit boundaries. `panic` is left at the default
# ("unwind") so pyo3 can convert Rust panics into Python exceptions at the
# `#[pymethods]` boundary.
[profile.release]
lto = "fat"
codegen-units = 1
