[package]
name = "ow4_native"
version = "0.1.0"
edition = "2021"
description = "Heuristic 2p Orbit Wars bot"

[lib]
name = "ow4_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
rustc-hash = "2.0"

[profile.release]
lto = "fat"
codegen-units = 1
